<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">大疆ast开发</string>
    <string name="action_settings">设置</string>
    <string name="disconnected">断开连接</string>
    <string name="product_information">无</string>
    <string name="connection_loose">状态: 没有产品连接</string>
    <string name="sdk_version">大疆SDK版本: %1$s</string>

    <string name="push_info">Push Info</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="search">Search</string>
    <string name="run">Run</string>
    <string name="camera_name_primary">Primary Camera Name</string>
    <string name="camera_name_secondary">Secondary Camera Name</string>
    <string name="camera_side_primary">Primary Camera Side</string>
    <string name="camera_side_secondary">Secondary Camera Side</string>
    <string name="focus_point">Focus Point</string>
    <string name="metering_point">Metering Point</string>
    <string name="gimbal_control">Gimbal Control</string>
    <string name="display_grid">Display Grid</string>
    <string name="txt_grid_overlay_selection">Change Grid Overlay Type: </string>
    <string name="txt_center_point_selection">Change Center Point Type: </string>
    <string name="txt_video_feed_selection">Change Video Source: </string>
    <string name="txt_video_dynamic_size">Test FPV widget view in different size: </string>
    <string name="grid_type_none">None</string>
    <string name="grid_type_parallel">Parallel</string>
    <string name="grid_type_parallel_diagonal">Parallel with Diagonals</string>
    <string name="set_auto_video_feed">Auto</string>
    <string name="set_primary_video_feed">Primary</string>
    <string name="set_secondary_video_feed">Secondary</string>
    <string name="set_fpv_size">Resize</string>

    <string name="wsbridge_ip">WSBridge IP</string>
    <string name="provider_google_maps">Google Maps</string>
    <string name="provider_here_maps">Here Maps</string>
    <string name="provider_amaps">AMaps</string>
    <string name="provider_mapbox">Mapbox</string>
    <string name="error_map_not_initialized">The map has not been initialized yet</string>
    <string name="home_direction">Home Direction</string>
    <string name="auto_frame">Auto Frame</string>
    <string name="unlock_flyzones">Unlock Fly Zones</string>
    <string name="show_flight_path">Show Flight Path</string>
    <string name="show_home_point">Show Home Point</string>
    <string name="show_gimbal_yaw">Show Gimbal Yaw</string>
    <string name="clear_flight_path">Clear Flight Path</string>
    <string name="replace_icon">Replace Icon</string>
    <string name="fly_zone">Fly Zone</string>
    <string name="fly_zone_legend">Fly Zone Legend</string>
    <string name="dji_account_indicator">DJI Account Login Indicator</string>
    <string name="new_color">New Color</string>
    <string name="sync">Sync</string>
    <string-array name="iconArray">
        <item>Aircraft</item>
        <item>Home</item>
        <item>Gimbal Yaw</item>
        <item>Locked Zone</item>
        <item>Unlocked Zone</item>
    </string-array>
    <string-array name="mapTypeArray">
        <item>Standard</item>
        <item>Satellite</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="lineTypeArray">
        <item>Home Direction</item>
        <item>Flight Path</item>
        <item>Fly Zone Border</item>
    </string-array>

    <string name="mapbox_id">Please enter the map box key here.</string>
    <string name="component_listview_live_stream">现场直播WS</string>
    <string name="uavNo">无人机编号</string>
    <string name="exit">退出</string>
    <string name="importNo">请输入编号</string>
    <string name="importPort">端口号</string>
    <string name="importParaIp">请输入传数据ip</string>
    <string name="flyPara">请输入传数据ip</string>
    <string name="livingStream">直播流</string>
    <string name="flyParaTran">飞行数据</string>
    <string name="title">大疆AST开发</string>
    <string name="confirmInport">确认输入</string>
    <string name="importLiveIp">请输入推流ip</string>
    <string name="openUav">打开无人机画面</string>
</resources>