<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/timg">

    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="状态: 没有产品连接"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/text_product_info"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/text_product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/product_information"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_open"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        android:background="@drawable/round_btn"
        android:text="@string/openUav"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/edit_url_input"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/importLiveIp"
        android:inputType="textUri" />
    <Button
        android:id="@+id/btn_address"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:background="@drawable/round_btn"
        android:text="@string/confirmInport"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp"
        android:text="@string/sdk_version"
        android:textSize="15dp"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_marginTop="58dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/colorBlack"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="40dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/livingStream" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="155dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_alignLeft="@id/edit_url_input"
        android:text=":" />
    <EditText
        android:id="@+id/edit_url_inputPort"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="15dp"
        android:layout_alignLeft="@id/textView4"
        android:hint="@string/importPort"
        android:inputType="textUri" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/flyParaTran" />
    <EditText
        android:id="@+id/edit_url_input1"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/importParaIp"
        android:inputType="textUri" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="155dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_alignLeft="@id/edit_url_input1"
        android:text=":" />
    <EditText
        android:id="@+id/edit_url_inputPort1"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/importPort"
        android:layout_alignLeft="@id/textView6"
        android:inputType="textUri" />
    <EditText
        android:id="@+id/edit_uavNo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/importNo"
        android:inputType="textShortMessage" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/uavNo" />
    <Button
        android:id="@+id/btn_exit"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="560dp"
        android:background="@drawable/round_btn"
        android:text="@string/exit"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        />
</RelativeLayout>
